# graphqomb

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  codecov.yml  pyproject.toml  requirements-dev.txt  requirements-pyzx.txt  requirements.txt  twist_triangle_d5_rounds5_p0_graphqomb_type_i.ptn
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  dependabot-auto-merge.yml  doc.yml  mypy.yml  publish-to-pypi.yml  pyright.yml  pytest.yml  ruff.yml  typecheck.yml
docs/: requirements.txt
docs/source/: __init__.py  architecture.rst  circuit.rst  command.rst  (+31 more)
examples/: circuit_simulation_example.py  custom_coordinate_visualization.py  draw_graph.py  entanglement_scheduling_demo.py  feedforward_opt.py  focus_flow.py  gate_decomposition_debug.py  macro_vs_unit_test.py  measurement_pattern_simplification.py  non_unitary_pattern.py  nonunitary_parity_projection.py  pattern_from_circuit.py  pattern_generation.py  pattern_simulation_example.py  readme.rst  reduce_pattern.py  scheduler_pattern_demo.py  zxgraph_simplification.py
graphix_zx/: __init__.py  circuit.py  circuit_extraction.py  command.py  common.py  decoder_backend.py  euler.py  feedforward.py  flow.py  focus_flow.py  gates.py  graph_opt.py  graphstate.py  graphstate_refactor.py  interface.py  linalg.py  matrix.py  pattern.py  pauli_frame.py  qompiler.py  random_objects.py  resource_opt.py  schedule_solver.py  scheduler.py  simulator.py  simulator_backend.py  statevec.py  stim_compiler.py  transpiler.py  visualizer.py  zxgraphstate.py
graphqomb/: circuit.py  command.py  common.py  euler.py  feedforward.py  focus_flow.py  gates.py  gflow_utils.py  graphstate.py  greedy_scheduler.py  matrix.py  noise_model.py  pattern.py  pauli_frame.py  ptn_format.py  qompiler.py  random_objects.py  rng.py  schedule_solver.py  scheduler.py  simulator.py  simulator_backend.py  statevec.py  stim_compiler.py  stim_importer.py  visualizer.py  zx_util.py  zxgraphstate.py
tests/: draft_test_zxcircuit.py  test_circ_pattern.py  test_circuit.py  test_command.py  test_common.py  test_decoder_backend.py  test_euler.py  test_feedforward.py  test_focus_flow.py  test_gate.py  test_graph_compose.py  test_graphstate.py  test_graphstate_bulk_init.py  test_greedy_scheduler.py  test_noise_model.py  test_pattern.py  test_pattern_sim.py  test_pauli_frame.py  test_ptn_format.py  test_qec.py  test_scheduler_integration.py  test_simulator.py  test_simulator_backend.py  test_statevec.py  test_stim_compiler.py  test_stim_importer.py  test_stim_mpp.py  test_stim_parser.py  test_transpiler.py  test_visualizer.py  test_xor_decoder.py  test_zx_util.py  test_zxcircuit.py  test_zxgraphstate.py
(+6 files in other folders)
