[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "graphix-zx"
version = "0.1.0"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.ruff]
target-version = "py38"

line-length = 120

[tool.ruff.format]
docstring-code-format = true
