[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "graphix-zx"
version = "0.1.0"
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Conflicts with ruff format
  "COM812",
  "COM819",
  "D206",
  "D300",
  "E111",
  "E114",
  "E117",
  "ISC001",
  "ISC002",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",

  # Not necessary for this project
  "AIR",
  "ASYNC",
  "DJ",
  "PD",

  # Manually disabled
  "ANN10", # `self`/`cls` not annotated
  "CPY",   # copyright missing
  "D105",  # undocumented magic method
  "ERA",   # commented-out code
  "FBT",   # boolean-trap
  "FIX",   # fixme

  # will be activated future
  "EM101",
  "EM102",
  "TRY002",
  "TRY003",
  "TRY004",
  "D400",
  "TD003",
  "TD002",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "T201", # print
  "ANN201", # after creating BaseSimulatorBackend class
  "PLR0912", # too complex
  "C901", # too complex
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "S101", # `assert` detected
]

[tool.pytest.ini_options]
pythonpath = ["graphix_zx"]
testpaths = ["tests"]
filterwarnings = "ignore::DeprecationWarning"
markers = "slow: mark test as slow"
